test/classes/errors/nilability-init-field-dflt/init-field-dflt-nonnil-borrowed-from-oknil-borrowed.good
init-field-dflt-nonnil-borrowed-from-oknil-borrowed.chpl:11: error: default-initializing a field with a non-nilable type borrowed MyClass from an instance of nilable borrowed MyClass?
